# RecToHM

./: CLAUDE.md  README.md  _jsindex.js  _jsmod.js  _jsmod2.js  arguing_runner.py  bot.py  pyproject.toml  qwen_tts_server.py  qwen_tts_service.py  recruiter_runner.py
static/: config.html  index.html
